fix(Styles): The masthead was pushing the side of the main body out without the overflow-x property being hidden.

--- a/assets/css/fucomp.css
+++ b/assets/css/fucomp.css
@@ -6,6 +6,7 @@
 }
 
 .Post-image {
+  overflow-x: hidden;
   padding-top: 100vh;
 }
 
